Changes in @NEW@:
  o New Features:
    * Config files from RPM capsules are now handled by Conary instead of
      RPM, including diff/patch merging.
    * Emulate RPM file coloring behavior to allow a package to take
      ownership of files from another package based on the ABI used
      by those binaries. (CNY-3385)
    * The caching layer in the Conary proxy will now use locking
      to prevent other processes from trying to do the same work.
      (CNY-3374)

  o Bug Fixes:
    * gzip files that are corrupt in the first 4KB of compressed data
      no longer cause all policies that check for file type using
      conary's "magic" module to trace back. (CNY-3377)
    * conary.lib.util now has an fnmatchTranslate function that strips
      the end-of-string termination consistently in python 2.6.5 and
      in older versions. (CNY-3378)
    * dbstore's createIndex() method no longer fails if invoked multiple
      times without reloading the schema. (CNY-3380)
    * A bug related to Java files containing classes with no requirements
      is now fixed. (CNY-3379)
    * Unicode representations of flavors are now converted to ASCII
      strings before being parsed. (CNY-3381)
    * Fixed problem with the lookaside cache when a recipe defines a custom
      source action. (CNY-3386)
    * Fixed bug in verify which caused traceback with error messages
      about incorrect trove signatures.
    * Previously, user and password information for Conary repositories
      was hidden in backtraces only when the the user and password
      information came from separate "user" configuration.  Now, even
      if the user/password information is provided directly within a
      repository URL, it will still be hidden. (RBL-5191)

  o Internal Changes:
    * Renamed isPayload file flag to isEncapsulatedContent.
    * Added file flags to allow conary to override file contents and
      attributes for capsule-based files (such as from RPM).

Changes in 2.1.11: