@@ -5,6 +5,9 @@ Changes in @NEW@:
     * Emulate RPM file coloring behavior to allow a package to take
       ownership of files from another package based on the ABI used
       by those binaries. (CNY-3385)
+    * File sharing no longer requires identical fileIds. Files can now be
+      shared between troves even if metadata like link groups is different
+      between the files.
     * The caching layer in the Conary proxy will now use locking
       to prevent other processes from trying to do the same work.
       (CNY-3374)
